<resources>
    <string name="app_name">RecipeFinderApp</string>
    <string name="title_all_recipes">All</string>
    <string name="title_favourite_recipes">Favourite</string>
    <string name="title_random_recipe">Random Recipe</string>
    <string name="splash_screen_title">Recipe Finder</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="filter_recipe">Filter Recipe</string>
    <string name="select_item_to_filter">Select Item to Filter</string>

    <string name="image_content_description">image</string>
    <string name="label_title">Title</string>
    <string name="label_type">Type</string>
    <string name="label_category">Category</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_cooking_time_in_minutes">Cooking Time In Minutes</string>
    <string name="label_direction_to_cook">Direction To Cook</string>
    <string name="label_add_dish">ADD RECIPE</string>
    <string name="title_select_image_action">Select Image Action</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>

    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="err_msg_select_recipe_image">Select recipe image.</string>
    <string name="err_msg_enter_recipe_title">Enter recipe title.</string>
    <string name="err_msg_select_recipe_type">Select recipe type.</string>
    <string name="err_msg_select_recipe_category">Select recipe category.</string>
    <string name="err_msg_enter_recipe_ingredients">Enter recipe ingredients.</string>
    <string name="err_msg_select_recipe_cooking_time">Select recipe cooking time.</string>
    <string name="err_msg_enter_recipe_cooking_instructions">Enter recipe cooking instructions.</string>

    <string name="label_no_recipes_added_yet">No recipes added yet!!!</string>
    <string name="title_recipe_details">Recipe Details</string>

    <string name="label_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>
    <string name="label_no_favourite_recipes_added_yet">No favourite recipes added yet!!!</string>
    <string name="action_edit_recipe">Edit Recipe</string>
    <string name="action_delete_recipe">Delete Recipe</string>
    <string name="title_edit_recipe">Edit Recipe</string>
    <string name="title_delete_recipe">Delete Recipe</string>
    <string name="title_add_recipe">Add Recipe</string>

    <string name="label_update_recipe">Update Recipe</string>

    <string name="message_delete_recipe_dialog">Are you sure you want to delete %1$s.</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="message_added_to_favourites">Added to Favourites</string>
    
    <string name="message_already_added_to_favourites">You have already added the recipe to your favourites.</string>
    <string name="please_wait">Please Wait</string>
    <string name="share_recipe">Share Recipe</string>


</resources>