<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_recipes">

    <fragment
        android:id="@+id/navigation_all_recipes"
        android:name="com.abdullahsen.recipefinderapp.view.fragments.AllRecipesFragment"
        android:label="@string/title_all_recipes"
        tools:layout="@layout/fragment_all_recipes" />

    <fragment
        android:id="@+id/navigation_favourite_recipes"
        android:name="com.abdullahsen.recipefinderapp.view.fragments.FavouriteRecipesFragment"
        android:label="@string/title_favourite_recipes"
        tools:layout="@layout/fragment_favourite_recipes" />

    <fragment
        android:id="@+id/navigation_random_recipe"
        android:name="com.abdullahsen.recipefinderapp.view.fragments.RandomRecipeFragment"
        android:label="@string/title_random_recipe"
        tools:layout="@layout/fragment_random_recipe" />
</navigation>